# ProjectManhattan

./: .gitignore  CMakeLists.txt  TODO.txt
data/: characters.json  resource_constraints_normal.json  technologies.json
src/: main.cpp  main.cpy
src/Core/header/: CommonStructs.hpp  TimeSystem.hpp
src/Core/src/: TimeSystem.cpp
src/Research/: ResearchManager.cpp  ResearchManager.hpp
src/Resources/: ResourceConstraints.cpp  ResourceConstraints.hpp  ResourceMissing.hpp  ResourcesManager.cpp  ResourcesManager.hpp
src/UI/: DateHUD.cpp  DateHUD.hpp  IHUD.hpp  ResearchHUD.cpp  ResearchHUD.hpp  ResearchHUDController.cpp  ResearchHUDController.hpp  ResearchListHUD.hpp  ResourcesHUD.cpp  ResourcesHUD.hpp  TechTreeHUD.cpp  TechTreeHUD.hpp  TopBarHUD.cpp  TopBarHUD.hpp  UISync.hpp  UIVisibility.hpp
src/UI/ResearchHUD/: ResearchCompletedPopupHUD.cpp  ResearchCompletedPopupHUD.hpp  ResearchHUD.hpp  ResearchHUDController.cpp  ResearchHUDController.hpp  ResearchListHUD.cpp  ResearchListHUD.hpp  TechTreeHUD.hpp
tests/: ResearchManagerTests.cpp  ResourcesManagerTests.cpp
tests/Core/TimeSystem/: TimeSystemTests.cpp
